--- a/Parte1/postit.html
+++ b/Parte1/postit.html
@@ -19,49 +19,49 @@
 
   <body>
     <main>
-      <div class="box">
+      <div class="box yellow">
         <div>
           <h2>Task #1</h2>
           <p>Creare i postit</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box green">
         <div>
           <h2>Task #2</h2>
           <p>Colorarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box violet">
         <div>
           <h2>Task #3</h2>
           <p>Affiancarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box green">
         <div>
           <h2>Task #4</h2>
           <p>Spaziarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box yellow">
         <div>
           <h2>Task #5</h2>
           <p>Ombreggiarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box violet">
         <div>
           <h2>Task #6</h2>
           <p>Ruotarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box yellow">
         <div>
           <h2>Task #7</h2>
           <p>Animarli</p>
         </div>
       </div>
-      <div class="box">
+      <div class="box green">
         <div>
           <h2>Task #8</h2>
           <p>Testarli</p>
